--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -54,3 +54,23 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
   from { transform: scale(1) rotate(0deg);}
   to { transform: scale(1) rotate(360deg);}
 }
+
+/* layout.css Style */
+.upload-drop-zone {
+  margin:10px;
+  height: 100px;
+  border-width: 2px;
+}
+
+/* skin.css Style*/
+.upload-drop-zone {
+  color: #ccc;
+  border-style: dashed;
+  border-color: #ccc;
+  line-height: 100px;
+  text-align: center
+}
+.upload-drop-zone.drop {
+  color: #222;
+  border-color: #222;
+}
