--- a/src/app/views/account/account.html
+++ b/src/app/views/account/account.html
@@ -1,8 +1,8 @@
 <div class="tab-container full-width-style arrow-left dashboard">
     <ul class="tabs">
         <li ui-sref-active="active"><a ui-sref="main.account.dashboard"><i class="soap-icon-anchor circle"></i>Dashboard</a></li>
-        <li ui-sref-active="active"><a ui-sref="main.account.profile"><i class="soap-icon-user circle"></i>Profile</a></li>
-        <li ui-sref-active="active"><a ui-sref="main.account.equipments"><i class="soap-icon-businessbag circle"></i>Manage Equipments</a></li>
+        <li ui-sref-active="active"    ui-sref="main.account.profile.view"><a><i class="soap-icon-user circle"></i>Profile</a></li>
+        <li ui-sref-active="active"    ui-sref="main.account.equipments.list"><a><i class="soap-icon-businessbag circle"></i>Manage Equipments</a></li>
         <li ui-sref-active="active"><a ui-sref="main.account.jobsites"><i class="soap-icon-wishlist circle"></i>Manage Jobsites</a></li>
         <li ui-sref-active="active"><a ui-sref="main.account.favourites"><i class="soap-icon-conference circle"></i>Favourited</a></li>
         <li ui-sref-active="active"><a ui-sref="main.account.bookings"><i class="soap-icon-conference circle"></i>Bookings</a></li>
