--- a/src/app/views/account/profile/profile.html
+++ b/src/app/views/account/profile/profile.html
@@ -1,242 +1,3 @@
 <div id="profile" class="tab-pane fade in active">
-<div ng-show="!profileMdl.edit" class="view-profile">
-    <article class="image-box style2 box innerstyle personal-details">
-        <figure>
-            <a title="" href="#"><img width="270" height="263" alt="" src="http://placehold.it/270x263"></a>
-        </figure>
-        <div class="details">
-            <a ng-click="editProfile()" class="button btn-mini pull-right edit-profile-btn">EDIT PROFILE</a>
-            <h2 class="box-title fullname">{{user.fullname}}</h2>
-            <dl class="term-description">
-                <dt>user name:</dt><dd>{{user.email}}</dd>
-                <dt>first name:</dt><dd>Hiren</dd>
-                <dt>last name:</dt><dd>Kesariya</dd>
-                <dt>phone number:</dt><dd>{{user.phone}}</dd>
-                <dt>Date of birth:</dt><dd>21 May 1988</dd>
-                <dt>Street Address and number:</dt><dd>353 Third floor Avenue</dd>
-                <dt>Town / City:</dt><dd>Houston, texas</dd>
-                <dt>ZIP code:</dt><dd>{{user.zip_code}}</dd>
-                <dt>Country:</dt><dd>United States of America</dd>
-            </dl>
-        </div>
-    </article>
-    <hr>
-    <h2>About You</h2>
-    <div class="intro">
-        <p>Vestibulum tristique, justo eu sollicitudin sagittis, metus dolor eleifend urna, quis scelerisque purus quam nec ligula. Suspendisse iaculis odio odio, ac vehicula nisi faucibus eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse posuere semper sem ac aliquet. Duis vel bibendum tellus, eu hendrerit sapien. Proin fringilla, enim vel lobortis viverra, augue orci fringilla diam, sed cursus elit mi vel lacus. Nulla facilisi. Fusce sagittis, magna non vehicula gravida, ante arcu pulvinar arcu, aliquet luctus arcu purus sit amet sem. Mauris blandit odio sed nisi porttitor egestas. Mauris in quam interdum purus vehicula rutrum quis in sem. Integer interdum lectus at nulla dictum luctus. Sed risus felis, posuere id condimentum non, egestas pulvinar enim. Praesent pretium risus eget nisi ullamcorper fermentum. Duis lacinia nisi ac rhoncus vestibulum.</p>
-    </div>
-    <hr>
-    <h2>Suggested Equipment</h2>
-    <div class="suggestions image-carousel style2" data-animation="slide" data-item-width="170" data-item-margin="22">
-        <ul class="slides">
-            <li>
-                <a href="#" class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">Adventure</h5>
-            </li>
-            <li>
-                <a href="#" class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">Beaches &amp; Sun</h5>
-            </li>
-            <li>
-                <a href="#" class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">Casinos</h5>
-            </li>
-            <li>
-                <a href="#" class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">Family Fun</h5>
-            </li>
-            <li>
-                <a href="#" class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">History</h5>
-            </li>
-            <li>
-                <a href="#" class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">Adventure</h5>
-            </li>
-        </ul>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-md-4">
-            <h4>Benefits of Tavelo Account</h4>
-            <ul class="benefits triangle hover">
-                <li><a href="#">Faster bookings with lesser clicks</a></li>
-                <li><a href="#">Track travel history &amp; manage bookings</a></li>
-                <li class="active"><a href="#">Manage profile &amp; personalize experience</a></li>
-                <li><a href="#">Receive alerts &amp; recommendations</a></li>
-            </ul>
-        </div>
-        <div class="col-md-4 previous-bookings image-box style14">
-            <h4>Your Previous Bookings</h4>
-            <article class="box">
-                <figure class="no-padding">
-                    <a title="" href="#">
-                        <img alt="" src="http://placehold.it/63x59" width="63" height="59">
-                    </a>
-                </figure>
-                <div class="details">
-                    <h5 class="box-title"><a href="#">Half-Day Island Tour</a><small class="fourty-space"><span class="price">$35</span> Family Package</small></h5>
-                </div>
-            </article>
-            <article class="box">
-                <figure class="no-padding">
-                    <a title="" href="#">
-                        <img alt="" src="http://placehold.it/63x59" width="63" height="59">
-                    </a>
-                </figure>
-                <div class="details">
-                    <h5 class="box-title"><a href="#">Ocean Park Tour</a><small class="fourty-space"><span class="price">$26</span> Per Person</small></h5>
-                </div>
-            </article>
-        </div>
-        <div class="col-md-4">
-            <h4>Need Travelo Help?</h4>
-            <div class="contact-box">
-                <p>We would be more than happy to help you. Our team advisor are 24/7 at your service to help you.</p>
-                <address class="contact-details">
-                    <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-HELLO</span>
-                    <br>
-                    <a class="contact-email" href="#">help@travelo.com</a>
-                </address>
-            </div>
-        </div>
-    </div>
-</div>
-<div ng-show="profileMdl.edit" class="edit-profile">
-    <form validate-form name="profileMdl.form" novalidate ng-submit="updateProfile()" class="edit-profile-form">
-        <h2>Personal Details</h2>
-        <div class="col-sm-9 no-padding no-float">
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>First Name</label>
-                    <input type="text" name="firstname" required class="input-text full-width" placeholder="first name">
-                </div>
-                <div class="col-sms-6 col-sm-6">
-                    <label>Last Name</label>
-                    <input type="text" name="lastname" required class="input-text full-width" placeholder="last name">
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>Email Address</label>
-                    <input type="text" name="email" required class="input-text full-width" placeholder="email address">
-                </div>
-                <div class="col-sms-6 col-sm-6">
-                    <label>Verify Email Address</label>
-                    <input type="text" class="input-text full-width" placeholder="verify email">
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>Country Code</label>
-                    <div class="selector">
-                        <select class="full-width">
-                            <option>United Kingdom (+44)</option>
-                            <option>United States (+1)</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-sms-6 col-sm-6">
-                    <label>Phone Number</label>
-                    <input type="text" name="phone" required class="input-text full-width" placeholder="">
-                </div>
-            </div>
-            <div class="row form-group">
-                <label class="col-xs-12">Date of Birth</label>
-                <div class="col-xs-4 col-sm-2">
-                    <div class="selector">
-                        <select class="full-width">
-                            <option value="">date</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-xs-4 col-sm-2">
-                    <div class="selector">
-                        <select class="full-width">
-                            <option value="">month</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-xs-4 col-sm-2">
-                    <div class="selector">
-                        <select class="full-width">
-                            <option value="">year</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <h2>Contact Details</h2>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>Street Name</label>
-                    <input type="text" class="input-text full-width">
-                </div>
-                <div class="col-sms-6 col-sm-6">
-                    <label>Address</label>
-                    <input type="text" class="input-text full-width">
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>City</label>
-                    <div class="selector">
-                        <select class="full-width">
-                            <option value="">Select...</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-sms-6 col-sm-6">
-                    <label>Country</label>
-                    <div class="selector">
-                        <select class="full-width">
-                            <option value="">Select...</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>Region State</label>
-                    <div class="selector">
-                        <select class="full-width">
-                            <option value="">Select...</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <h2>Upload Profile Photo</h2>
-            <div class="row form-group">
-                <div class="col-sms-12 col-sm-6 no-float">
-                    <div class="fileinput full-width">
-                        <input type="file" class="input-text" data-placeholder="select image/s">
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <h2>Describe Yourself</h2>
-            <div class="form-group">
-                <textarea rows="5" class="input-text full-width" placeholder="please tell us about you"></textarea>
-            </div>
-            <div class="from-group">
-                <button type="submit" ng-click="updateProfile()" class="btn-medium col-sms-6 col-sm-4">UPDATE</button>
-                <button ng-click="cancelEdit()" class="btn-medium btn-default col-sms-6 col-sm-4">CANCEL</button>
-            </div>
-
-        </div>
-    </form>
-</div>
+<ui-view></ui-view>
 </div>
