--- a/src/app/views/account/account.html
+++ b/src/app/views/account/account.html
@@ -1,15 +1,15 @@
 <div class="tab-container full-width-style arrow-left dashboard">
     <ul class="tabs">
-        <li ui-sref-active="active"><a ui-sref="main.account.dashboard"><i class="soap-icon-anchor circle"></i>Dashboard</a></li>
-        <li ui-sref-active="active"    ui-sref="main.account.profile.view"><a><i class="soap-icon-user circle"></i>Profile</a></li>
-        <li ui-sref-active="active"    ui-sref="main.account.equipments.list"><a><i class="soap-icon-businessbag circle"></i>Manage Equipments</a></li>
-        <li ui-sref-active="active"><a ui-sref="main.account.jobsites"><i class="soap-icon-wishlist circle"></i>Manage Jobsites</a></li>
-        <li ui-sref-active="active"><a ui-sref="main.account.favourites"><i class="soap-icon-conference circle"></i>Favourited</a></li>
-        <li ui-sref-active="active"><a ui-sref="main.account.bookings"><i class="soap-icon-conference circle"></i>Bookings</a></li>
-        <li ui-sref-active="active"><a ui-sref="main.account.requests"><i class="soap-icon-conference circle"></i>Requests</a></li>
-        <li ui-sref-active="active"><a ui-sref="main.account.settings"><i class="soap-icon-settings circle"></i>Settings</a></li>
+        <li ui-sref-active="activ" ui-sref="main.account.dashboard"  ><a><i class="soap-icon-anchor circle"></i>Dashboard</a></li>
+        <li active-state="main.account.profile"    ui-sref="main.account.profile.view"><a><i class="soap-icon-user circle"></i>Profile</a></li>
+        <li active-state="main.account.equipments" ui-sref="main.account.equipments.list"><a><i class="soap-icon-businessbag circle"></i>Manage Equipments</a></li>
+        <li ui-sref-active="active" ui-sref="main.account.jobsites"  ><a><i class="soap-icon-wishlist circle"></i>Manage Jobsites</a></li>
+        <li ui-sref-active="active" ui-sref="main.account.favourites"><a><i class="soap-icon-conference circle"></i>Favourited</a></li>
+        <li ui-sref-active="active" ui-sref="main.account.bookings"  ><a><i class="soap-icon-conference circle"></i>Bookings</a></li>
+        <li ui-sref-active="active" ui-sref="main.account.requests"  ><a><i class="soap-icon-conference circle"></i>Requests</a></li>
+        <li ui-sref-active="active" ui-sref="main.account.settings"  ><a><i class="soap-icon-settings circle"></i>Settings</a></li>
     </ul>
-<div class="tab-content">
-    <ui-view/>
-</div>
+    <div class="tab-content">
+        <ui-view/>
+    </div>
 </div>
