downgraded angular to support animation..

--- a/src/app/views/account/account.html
+++ b/src/app/views/account/account.html
@@ -1,6 +1,6 @@
 <div class="tab-container full-width-style arrow-left dashboard">
     <ul class="tabs">
-        <li ui-sref-active="activ" ui-sref="main.account.dashboard"  ><a><i class="soap-icon-anchor circle"></i>Dashboard</a></li>
+        <li ui-sref-active="active" ui-sref="main.account.dashboard"  ><a><i class="soap-icon-anchor circle"></i>Dashboard</a></li>
         <li active-state="main.account.profile"    ui-sref="main.account.profile.view"><a><i class="soap-icon-user circle"></i>Profile</a></li>
         <li active-state="main.account.equipments" ui-sref="main.account.equipments.list"><a><i class="soap-icon-businessbag circle"></i>Manage Equipments</a></li>
         <li ui-sref-active="active" ui-sref="main.account.jobsites"  ><a><i class="soap-icon-wishlist circle"></i>Manage Jobsites</a></li>
