downgraded angular to support animation..

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -74,3 +74,8 @@ $icon-font-path: "../../bower_components/bootstrap-sass-official/assets/fonts/bo
   color: #222;
   border-color: #222;
 }
+
+.angular-google-map,.angular-google-map-container {
+  height: 400px;
+  width: 100%;
+}
