--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -10,7 +10,19 @@
     </ul>
     <div class="tab-content" style="height: 500px;">
         <div ng-show="mdl.tab1=='photos'" ng-class="{'fade in active':mdl.tab1=='photos'}" class="tab-pane">
-            <carousel ng-init="interval=1000" class="photo-gallery style1" interval="interval">
+            <carousel ng-init="interval=2000" class="photo-gmainMdl.open = function($event,type) {
+      mainMdl.openedStart = false;
+      mainMdl.openedEnd = false;
+      $event.preventDefault();
+      $event.stopPropagation();
+
+      mainMdl['opened'+type] = true;
+    };
+    mainMdl.minDate = mainMdl.minDate ? null : new Date();
+    mainMdl.dateOptions = {
+      formatYear: 'yy',
+      startingDay: 1
+    };allery style1" interval="interval">
 
                     <slide ng-repeat="slide in [0,1,2,3,4,5,6]">
                         <img src="http://placehold.it/900x500" alt=""/>
@@ -853,14 +865,21 @@
                 <form method="post">
                     <div class="form-group">
                         <label>From</label>
-                        <div class="datepicker-wrap">
-                            <input type="text" name="date_from" class="input-text full-width" placeholder="mm/dd/yy" />
+                        <div class="datepicker-wrap" ng-click="mdl.open($event,'Start')">
+                            <input type="text" class="input-text  full-width" datepicker-popup="{{dateFormat}}" ng-model="mdl.startDate"
+                                   is-open="mdl.openedStart" min-date="mdl.minDate" datepicker-options="mdl.dateOptions"
+                                   ng-focus="mdl.open($event,'Start')"
+                                   close-text="Close"/>
                         </div>
+
                     </div>
                     <div class="form-group">
                         <label>To</label>
-                        <div class="datepicker-wrap">
-                            <input type="text" name="date_to" class="input-text full-width" placeholder="mm/dd/yy" />
+                        <div class="datepicker-wrap" ng-click="mdl.open($event,'End')">
+                            <input type="text" class="input-text  full-width" datepicker-popup="{{dateFormat}}" ng-model="mdl.startDate"
+                                   is-open="mdl.openedEnd" min-date="mdl.minDate" datepicker-options="mdl.dateOptions"
+                                   ng-focus="mdl.open($event,'End')"
+                                   close-text="Close"/>
                         </div>
                     </div>
                 </form>
