added cart rout controller html

--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -11,7 +11,7 @@
                 </nav>
                 <ul class="quick-menu pull-right clearfix">
                     <li>
-                        <a class="pointerhover">CART(3 items)</a>
+                        <a class="pointerhover" ui-sref="main.cart">CART(3 items)</a>
                     </li>
                     <li><a ng-click="accountClick()" class="soap-popupbox">ACCOUNT</a></li>
 
