update cart service ang manage jobsite

--- a/src/app/views/account/equipments/equipments.html
+++ b/src/app/views/account/equipments/equipments.html
@@ -27,7 +27,7 @@
                         </dl>
                         <i class="icon soap-icon-departure"></i>
                     </div>
-                    <div class="description" ui-sref="main.account.jobsites">
+                    <div class="description" ui-sref="main.account.jobsites.list">
                         <i class="icon soap-icon-longarrow-right"></i>
                         <span>Manage Jobsites</span>
                     </div>
