--- a/src/app/views/account/equipments/add/add.html
+++ b/src/app/views/account/equipments/add/add.html
@@ -4,104 +4,113 @@
         <div class="col-sm-9 no-padding no-float">
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
-                    <label>First Name</label>
-                    <input type="text" name="firstname" required class="input-text full-width" placeholder="first name">
+                    <label>Equipment Name</label>
+                    <input type="text" name="equipmentname" required class="input-text full-width" placeholder="Enter Equipment Name">
                 </div>
                 <div class="col-sms-6 col-sm-6">
-                    <label>Last Name</label>
-                    <input type="text" name="lastname" required class="input-text full-width" placeholder="last name">
+                    <label>Brand Name</label>
+                    <input type="text" name="brand" required class="input-text full-width" placeholder="Brand Name">
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-sms-12 col-sm-12">
+                    <label>Description</label>
+                    <textarea rows="5" class="input-text full-width" placeholder="please tell us about equipment in detail"></textarea>
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-sms-12 col-sm-12">
+                    <label>Tags</label>
+                    <textarea rows="5" class="input-text full-width" placeholder="please put tag values separated by Comma (,)"></textarea>
                 </div>
             </div>
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
-                    <label>Email Address</label>
-                    <input type="text" name="email" required class="input-text full-width" placeholder="email address">
+                    <label>Daily Price</label>
+                    <input type="text" name="daily price" required class="input-text full-width" placeholder="Daily Rent Price">
                 </div>
                 <div class="col-sms-6 col-sm-6">
-                    <label>Verify Email Address</label>
-                    <input type="text" class="input-text full-width" placeholder="verify email">
+                    <label>Weekly Price</label>
+                    <input type="text" class="input-text full-width" placeholder="Weekly Rent Price">
                 </div>
             </div>
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
-                    <label>Country Code</label>
-                    <div class="selector">
-                        <select class="full-width">
-                            <option>United Kingdom (+44)</option>
-                            <option>United States (+1)</option>
-                        </select>
-                    </div>
+                    <label>Monthly Price</label>
+                    <input type="text" name="monthlyprice" required class="input-text full-width" placeholder="Monthly Rent Price ">
                 </div>
                 <div class="col-sms-6 col-sm-6">
-                    <label>Phone Number</label>
-                    <input type="text" name="phone" required class="input-text full-width" placeholder="">
+                    <label>Selling Price</label>
+                    <input type="text" class="input-text full-width" placeholder="Selling Price for Equipment">
                 </div>
             </div>
             <div class="row form-group">
-                <label class="col-xs-12">Date of Birth</label>
-                <div class="col-xs-4 col-sm-2">
+                <div class="col-sms-4 col-sm-4">
+                    <label>Category</label>
                     <div class="selector">
                         <select class="full-width">
-                            <option value="">date</option>
+                            <option>list name</option>
+                            <option>list name</option>
                         </select>
                     </div>
                 </div>
-                <div class="col-xs-4 col-sm-2">
+                <div class="col-sms-4 col-sm-4">
+                    <label>Sub Category</label>
                     <div class="selector">
                         <select class="full-width">
-                            <option value="">month</option>
+                            <option>list name</option>
+                            <option>list name</option>
                         </select>
                     </div>
                 </div>
-                <div class="col-xs-4 col-sm-2">
+                <div class="col-sms-4 col-sm-4">
+                    <label>Super Sub-category</label>
                     <div class="selector">
                         <select class="full-width">
-                            <option value="">year</option>
+                            <option>list name</option>
+                            <option>list name</option>
                         </select>
                     </div>
                 </div>
             </div>
+
             <hr>
-            <h2>Contact Details</h2>
+
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
-                    <label>Street Name</label>
-                    <input type="text" class="input-text full-width">
+                    <label>Equipment Condition</label>
+                    <div class="selector">
+                        <select class="full-width">
+                            <option>New</option>
+                            <option>Old</option>
+                        </select>
+                    </div>
                 </div>
                 <div class="col-sms-6 col-sm-6">
-                    <label>Address</label>
+                    <label>SKU</label>
                     <input type="text" class="input-text full-width">
                 </div>
             </div>
             <div class="row form-group">
 
                 <div class="col-sms-6 col-sm-6">
-                    <label>Country</label>
+                    <label>Location</label>
                     <div class="selector">
-                        <select ng-model="addEquiMdl.countryId" ng-options="id as name for (id,name) in addEquiMdl.countries" class="full-width">
-                            <option value="">Select...</option>
+                        <select class="full-width">
+                            <option>list name</option>
+                            <option>list name</option>
                         </select>
                     </div>
                 </div>
                 <div class="col-sms-6 col-sm-6">
-                    <label>Region State</label>
+                    <label>Quantity</label>
                     <div class="selector">
-                        <select ng-model="addEquiMdl.stateId" ng-options="id as name for (id,name) in addEquiMdl.states" class="full-width">
-                            <option value="">Select...</option>
+                        <select class="full-width">
+                            <option>list name</option>
+                            <option>list name</option>
                         </select>
                     </div>
                 </div>
-            </div>
-            <div class="row form-group">
-                <div class="col-sms-6 col-sm-6">
-                    <label>City</label>
-                    <div class="selector">
-                        <select ng-model="addEquiMdl.cityId" ng-options="id as name for (id,name) in addEquiMdl.cities" class="full-width">
-                            <option value="">Select...</option>
-                        </select>
-                    </div>
-                </div>
-
             </div>
             <hr>
             <h2>Upload Profile Photo</h2>
@@ -113,13 +122,10 @@
                 </div>
             </div>
             <hr>
-            <h2>Describe Yourself</h2>
-            <div class="form-group">
-                <textarea rows="5" class="input-text full-width" placeholder="please tell us about you"></textarea>
-            </div>
+
             <div class="from-group">
-                <button type="submit" ui-sref="main.account.equipments.list" class="btn-medium col-sms-6 col-sm-4">UPDATE</button>
-                <button ui-sref="main.account.equipments.list" class="btn-medium btn-default col-sms-6 col-sm-4">CANCEL</button>
+                <button type="submit" class="btn-medium col-sms-6 col-sm-4">ADD EQUIPMENT</button>
+                <button class="btn-medium btn-default col-sms-6 col-sm-4">CANCEL</button>
             </div>
 
         </div>
